# era-compiler-llvm

./: .gitignore  123  LICENSE  README.md  build.sh  build_gnu.sh  build_musl.sh  test.txt
.github/: PULL_REQUEST_TEMPLATE.md  forge-benchmarks.yaml  regression-tests.yml
.github/workflows/: benchmarks-integration-tests.yml  build-binaries.yml  cache-regen.yml  clang-tests.yml  compiler-benchmarks.yml  compiler-integration-tests.yml  coverage.yml  forge-benchmarks.yaml  issue-release-workflow.yml  libclang-abi-tests.yml  libclc-tests.yml  lld-tests.yml  lldb-tests.yml  llvm-back-end.yml  llvm-benchmarks.yml  llvm-bugs.yml  llvm-save-build.yml  llvm-tests.yml  lnt-benchmarks.yml  multiplatform-integration-tests.yml  pr-code-format.yml  regression-tests.yml  scheduled.yml  secrets_scanner.yaml
clang/: CMakeLists.txt
clang-tools-extra/pseudo/: DesignNotes.md  README.md
infra/: docker-compose.yml
infrastructure/: Dockerfile  docker-compose-runner.yml  docker_build.sh
lld/: .clang-tidy  CMakeLists.txt  README.md
lld/Common/: CMakeLists.txt  DriverDispatcher.cpp
lld/ELF/: CMakeLists.txt  Config.h  Driver.cpp  InputFiles.cpp  InputFiles.h  InputSection.cpp  LinkerScript.cpp  Options.td  SymbolTable.cpp  Symbols.h  Target.cpp  (+2 more)
lld/unittests/: .clang-tidy  CMakeLists.txt
lld/unittests/EVM/: CMakeLists.txt  LLDTest.cpp
lld/unittests/EVM/Inputs/: A_deploy.ll  A_deployed.ll  D_deploy.ll  D_deployed.ll  R_deploy.ll  R_deployed.ll  deployIr.ll  deployedIr.ll  undefDeployIr.ll
lld/unittests/EraVM/: CMakeLists.txt  LLDTest.cpp
llvm/: .clang-tidy  CMakeLists.txt
(+1161 files in other folders)
